--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-<link= rel="stylesheet" type="text/css" scr="./dist.main.css">
+<link= rel="stylesheet" type="text/css" href="./dist.main.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1>Добро пожаловать на мой сайт</h1>
-    
-    <!-- Подключение index.js -->
     <script src="main.js"></script>
+    <h2>    Эта строка, чтобы понять работоспособность src/index.html   </h2>
 </body>
 </html>
